// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsItem should render empty 1`] = `null`;

exports[`PostsItem should render with node 1`] = `
<PostsItem
  node={
    Object {
      "excerpt": "Excerpt text",
      "fields": Object {
        "slug": "/first",
      },
      "frontmatter": Object {
        "date": "10 May, 2018",
        "title": "Some title",
      },
    }
  }
>
  <PostsItem__PostItemSty>
    <div
      className="PostsItem__PostItemSty-sc-1fceitp-0 bGzTAb"
    >
      <h2>
        <Link
          to="/blog/first"
        >
          <div
            data-mock="Link"
          >
            Some title
          </div>
        </Link>
      </h2>
      <PostDate>
        <div
          data-mock="PostDate"
        >
          10 May, 2018
        </div>
      </PostDate>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Excerpt text",
          }
        }
      />
    </div>
  </PostsItem__PostItemSty>
</PostsItem>
`;

exports[`PostsItem should render with slug when title not provided 1`] = `
<PostsItem
  node={
    Object {
      "excerpt": "Excerpt text",
      "fields": Object {
        "slug": "/first",
      },
      "frontmatter": Object {
        "date": "10 May, 2018",
      },
    }
  }
>
  <PostsItem__PostItemSty>
    <div
      className="PostsItem__PostItemSty-sc-1fceitp-0 bGzTAb"
    >
      <h2>
        <Link
          to="/blog/first"
        >
          <div
            data-mock="Link"
          >
            /first
          </div>
        </Link>
      </h2>
      <PostDate>
        <div
          data-mock="PostDate"
        >
          10 May, 2018
        </div>
      </PostDate>
      <p
        dangerouslySetInnerHTML={
          Object {
            "__html": "Excerpt text",
          }
        }
      />
    </div>
  </PostsItem__PostItemSty>
</PostsItem>
`;
